This enforces the capability filter specified in an application manifest.
Note that this is mostly set to permissive right now because the capability filters as currently specified are a PITA to use. I'm going to be working with some of the security folk to devise a way to simplify this.

Review URL: https://codereview.chromium.org/1716793003

Cr-Commit-Position: refs/heads/master@{#376940}

--- a/components/filesystem/BUILD.gn
+++ b/components/filesystem/BUILD.gn
@@ -71,6 +71,7 @@ mojo_native_application("apptests") {
   ]
 
   deps = [
+    ":apptest_manifest",
     "//base",
     "//components/filesystem/public/interfaces",
     "//mojo/common",
@@ -82,4 +83,9 @@ mojo_native_application("apptests") {
   data_deps = [
     ":filesystem",
   ]
+}
+
+mojo_application_manifest("apptest_manifest") {
+  application_name = "filesystem_apptests"
+  source = "apptest_manifest.json"
 }
