--- a/mash/shell/manifest.json
+++ b/mash/shell/manifest.json
@@ -1,5 +1,5 @@
 {
   "url": "mojo://mash_shell/",
   "name": "System Service Controller",
-  "capabilities": { }
+  "capabilities": { "*": ["*"] }
 }
