--- a/components/resource_provider/manifest.json
+++ b/components/resource_provider/manifest.json
@@ -1,5 +1,5 @@
 {
   "url": "mojo://resource_provider/",
   "name": "Resource Provider",
-  "capabilities": { }
+  "capabilities": { "*": [ "*" ] }
 }
