--- a/mash/example/window_type_launcher/BUILD.gn
+++ b/mash/example/window_type_launcher/BUILD.gn
@@ -4,6 +4,7 @@
 
 import("//build/config/ui.gni")
 import("//mojo/public/mojo_application.gni")
+import("//mojo/public/mojo_application_manifest.gni")
 import("//mojo/public/tools/bindings/mojom.gni")
 import("//tools/grit/repack.gni")
 
@@ -18,6 +19,7 @@ executable("window_type_launcher") {
   ]
 
   deps = [
+    ":manifest",
     ":window_type_launcher_resources",
     "//base",
     "//base:base_static",
@@ -56,4 +58,10 @@ copy("window_type_launcher_resources") {
   deps = [
     "//ui/views/mus:resources",
   ]
+}
+
+mojo_application_manifest("manifest") {
+  type = "exe"
+  application_name = "window_type_launcher_exe"
+  source = "manifest.json"
 }
