Implements the input.ime.createWindow API.
This cl implements the IME window according to the mocks per
the API proposal: https://docs.google.com/document/d/1pqZO80ZOmgWzuQphf-uq5y967umcy7tqw5ETjuF19TU.
For the normal type of window, the titlebar is located at top.
For the follow-cursor type of window, the titlebar is located at left.
The IME window is in-activatable & always-on-top.

This cl is based on https://codereview.chromium.org/1717603004.

This cl leaves a couple of TODOs:
1) the createWindow API should not work when the IME extension is not
activated.
2) the follow-cursor window should be singleton, auto aligned with
the cursor or composition in the input field, and auto hide when cursor
or composition is not available.
3) the createWindow API should return JS 'window' object.
4) dragging support for the ime window.

BUG=517773
TEST=None

Review URL: https://codereview.chromium.org/1595313002

Cr-Commit-Position: refs/heads/master@{#376948}

--- a/chrome/test/BUILD.gn
+++ b/chrome/test/BUILD.gn
@@ -962,6 +962,8 @@ if (!is_android) {
         sources += [ "//third_party/liblouis/nacl_wrapper/liblouis_wrapper_browsertest.cc" ]
         deps += [ "//chrome/browser/chromeos" ]
         data_deps += [ "//third_party/liblouis:liblouis_test_data" ]
+      } else if (is_linux || is_win) {
+        sources += [ "../browser/ui/views/ime/ime_window_browsertest.cc" ]
       }
 
       if (is_win || is_linux) {
