Mojo bindings: Add string support to StructTraits
This CL enables string-typed fields in structs to be
serialized and deserialized via StructTraits using
base::StringPiece as an intermediate interface between
the native type and the message buffer.

BUG=577686
R=yzshen@chromium.org

Review URL: https://codereview.chromium.org/1719183002

Cr-Commit-Position: refs/heads/master@{#376952}

--- a/mojo/public/interfaces/bindings/tests/BUILD.gn
+++ b/mojo/public/interfaces/bindings/tests/BUILD.gn
@@ -29,6 +29,17 @@ mojom("test_interfaces") {
   with_environment = false
 }
 
+mojom("test_struct_traits_interfaces") {
+  testonly = true
+  sources = [
+    "struct_with_traits.mojom",
+  ]
+
+  typemaps = [ "struct_with_traits.typemap" ]
+
+  with_environment = false
+}
+
 mojom("test_interfaces_experimental") {
   testonly = true
   sources = [
