--- a/mojo/public/cpp/bindings/tests/BUILD.gn
+++ b/mojo/public/cpp/bindings/tests/BUILD.gn
@@ -42,6 +42,8 @@ source_set("tests") {
     "string_unittest.cc",
     "struct_traits_unittest.cc",
     "struct_unittest.cc",
+    "struct_with_traits_impl.cc",
+    "struct_with_traits_impl.h",
     "sync_method_unittest.cc",
     "type_conversion_unittest.cc",
     "union_unittest.cc",
@@ -62,6 +64,7 @@ source_set("tests") {
     "//mojo/public/interfaces/bindings/tests:test_interfaces_blink",
     "//mojo/public/interfaces/bindings/tests:test_interfaces_chromium",
     "//mojo/public/interfaces/bindings/tests:test_interfaces_experimental",
+    "//mojo/public/interfaces/bindings/tests:test_struct_traits_interfaces",
     "//testing/gtest",
   ]
 }
