Remove //chrome and //content deps from ProfileSyncServiceBookmarkTest
BUG=586642

Review URL: https://codereview.chromium.org/1705813002

Cr-Commit-Position: refs/heads/master@{#376960}

--- a/components/browser_sync/browser/BUILD.gn
+++ b/components/browser_sync/browser/BUILD.gn
@@ -107,6 +107,7 @@ source_set("test_support") {
     ":browser",
     "//base",
     "//base/test:test_support",
+    "//components/bookmarks/browser:browser",
     "//components/history/core/browser:browser",
     "//components/invalidation/impl",
     "//components/invalidation/impl:test_support",
