Sending generated vote on password generation.
The generating of password by user is strong indication that the current form is suitable for generation and we can use it for improving our heuristics.

This patch adds |generation_event| to uploaded field vote (in AutofillField structure and in AutofillUploadContents proto) with information about generation event which happened.

BUG=552420

Review URL: https://codereview.chromium.org/1686063004

Cr-Commit-Position: refs/heads/master@{#376968}

--- a/components/password_manager/core/browser/BUILD.gn
+++ b/components/password_manager/core/browser/BUILD.gn
@@ -116,6 +116,7 @@ source_set("browser") {
     "//base",
     "//base:i18n",
     "//components/autofill/core/browser",
+    "//components/autofill/core/browser/proto",
     "//components/autofill/core/common",
     "//components/keyed_service/core",
     "//components/os_crypt",
@@ -226,6 +227,7 @@ source_set("unit_tests") {
     ":test_support",
     "//base/test:test_support",
     "//components/autofill/core/browser:test_support",
+    "//components/autofill/core/browser/proto",
     "//components/autofill/core/common",
     "//components/os_crypt",
     "//components/password_manager/core/browser:proto",
