--- a/android_webview/BUILD.gn
+++ b/android_webview/BUILD.gn
@@ -448,6 +448,10 @@ source_set("common") {
     "browser/net/android_stream_reader_url_request_job.h",
     "browser/net/aw_http_user_agent_settings.cc",
     "browser/net/aw_http_user_agent_settings.h",
+    "browser/net/aw_network_change_notifier.cc",
+    "browser/net/aw_network_change_notifier.h",
+    "browser/net/aw_network_change_notifier_factory.cc",
+    "browser/net/aw_network_change_notifier_factory.h",
     "browser/net/aw_network_delegate.cc",
     "browser/net/aw_network_delegate.h",
     "browser/net/aw_request_interceptor.cc",
