Adds the OCHamcrest library to the iOS build.
OCHamcrest is a dependency of the integration testing framework that will
be used by iOS code. It is only used for tests (and is marked as so in
ios/third_party/ochamcrest/BUILD.gn).

The build is a bit involved as OCHamcrest as it mix relative imports "..."
with imports of the form <OCHamcrest/...> but the source code is not found
in an OCHamcrest directory. So build such a directory structure in
<(SHARED_INTERMEDIATE_DIR)/ios/third_party/ochamcrest as part of the build.

TBR=dpranke@chromium.org
BUG=580730
TEST=None

Review URL: https://codereview.chromium.org/1723663002

Cr-Commit-Position: refs/heads/master@{#376985}

--- a/.gitignore
+++ b/.gitignore
@@ -185,6 +185,7 @@ vs-chromium-project.txt
 /ios/build/util/CANARY_VERSION
 /ios/third_party/fishhook/src
 /ios/third_party/gcdwebserver/src
+/ios/third_party/ochamcrest/src
 /llvm
 /media/cast/logging/cast_logging_proto_lib.xml
 /media/cdm/api
