--- a/BUILD.gn
+++ b/BUILD.gn
@@ -202,6 +202,7 @@ group("both_gn_and_gyp") {
       "//ios/net:ios_net_unittests",
       "//ios/public/provider/web",
       "//ios/testing:ocmock_support_unittest",
+      "//ios/third_party/ochamcrest",
       "//ios/web:ios_web_unittests",
       "//ios/web/shell:ios_web_shell",
     ]
