--- a/components/BUILD.gn
+++ b/components/BUILD.gn
@@ -204,6 +204,7 @@ test("components_unittests") {
     deps += [
       "//components/arc:unit_tests",
       "//components/ownership:unit_tests",
+      "//components/user_manager:unit_tests",
     ]
   }
 
