Move TestInfoExtractor to content_shell
it's only used from layout_test_browser_main.cc and has no other
dependencies on the test_runner

BUG=none
R=avi@chromium.org

Review URL: https://codereview.chromium.org/1724663003

Cr-Commit-Position: refs/heads/master@{#377011}

--- a/content/shell/BUILD.gn
+++ b/content/shell/BUILD.gn
@@ -80,6 +80,8 @@ static_library("content_shell_lib") {
     "browser/layout_test/layout_test_url_request_context_getter.h",
     "browser/layout_test/notify_done_forwarder.cc",
     "browser/layout_test/notify_done_forwarder.h",
+    "browser/layout_test/test_info_extractor.cc",
+    "browser/layout_test/test_info_extractor.h",
     "browser/shell.cc",
     "browser/shell.h",
     "browser/shell_access_token_store.cc",
