--- a/chrome/test/android/BUILD.gn
+++ b/chrome/test/android/BUILD.gn
@@ -7,56 +7,7 @@ import("//build/config/android/rules.gni")
 # GYP: //chrome/chrome_tests.gypi:chrome_java_test_support
 android_library("chrome_java_test_support") {
   testonly = true
-  java_files = [
-    "javatests/src/org/chromium/chrome/test/ChromeActivityTestCaseBase.java",
-    "javatests/src/org/chromium/chrome/test/ChromeInstrumentationTestRunner.java",
-    "javatests/src/org/chromium/chrome/test/ChromeTabbedActivityTestBase.java",
-    "javatests/src/org/chromium/chrome/test/DocumentActivityTestBase.java",
-    "javatests/src/org/chromium/chrome/test/gcore/MockChromeGoogleApiClient.java",
-    "javatests/src/org/chromium/chrome/test/invalidation/IntentSavingContext.java",
-    "javatests/src/org/chromium/chrome/test/MultiActivityTestBase.java",
-    "javatests/src/org/chromium/chrome/test/omaha/AttributeFinder.java",
-    "javatests/src/org/chromium/chrome/test/omaha/MockRequestGenerator.java",
-    "javatests/src/org/chromium/chrome/test/partnercustomizations/TestPartnerBrowserCustomizationsDelayedProvider.java",
-    "javatests/src/org/chromium/chrome/test/partnercustomizations/TestPartnerBrowserCustomizationsProvider.java",
-    "javatests/src/org/chromium/chrome/test/TestContentProvider.java",
-    "javatests/src/org/chromium/chrome/test/util/ActivityUtils.java",
-    "javatests/src/org/chromium/chrome/test/util/ApplicationData.java",
-    "javatests/src/org/chromium/chrome/test/util/ApplicationTestUtils.java",
-    "javatests/src/org/chromium/chrome/test/util/BookmarkTestUtil.java",
-    "javatests/src/org/chromium/chrome/test/util/browser/contextmenu/ContextMenuUtils.java",
-    "javatests/src/org/chromium/chrome/test/util/browser/LocationSettingsTestUtil.java",
-    "javatests/src/org/chromium/chrome/test/util/browser/notifications/MockNotificationManagerProxy.java",
-    "javatests/src/org/chromium/chrome/test/util/browser/signin/MockChangeEventChecker.java",
-    "javatests/src/org/chromium/chrome/test/util/browser/signin/SigninTestUtil.java",
-    "javatests/src/org/chromium/chrome/test/util/browser/sync/SyncTestUtil.java",
-    "javatests/src/org/chromium/chrome/test/util/browser/TabLoadObserver.java",
-    "javatests/src/org/chromium/chrome/test/util/browser/tabmodel/document/MockActivityDelegate.java",
-    "javatests/src/org/chromium/chrome/test/util/browser/tabmodel/document/MockDocumentTabCreatorManager.java",
-    "javatests/src/org/chromium/chrome/test/util/browser/tabmodel/document/MockStorageDelegate.java",
-    "javatests/src/org/chromium/chrome/test/util/browser/tabmodel/document/MockTabDelegate.java",
-    "javatests/src/org/chromium/chrome/test/util/browser/tabmodel/document/TestInitializationObserver.java",
-    "javatests/src/org/chromium/chrome/test/util/browser/tabmodel/MockTabModel.java",
-    "javatests/src/org/chromium/chrome/test/util/browser/tabmodel/MockTabModelSelector.java",
-    "javatests/src/org/chromium/chrome/test/util/browser/TabTitleObserver.java",
-    "javatests/src/org/chromium/chrome/test/util/ChromeRestriction.java",
-    "javatests/src/org/chromium/chrome/test/util/ChromeSigninUtils.java",
-    "javatests/src/org/chromium/chrome/test/util/ChromeTabUtils.java",
-    "javatests/src/org/chromium/chrome/test/util/DisableInTabbedMode.java",
-    "javatests/src/org/chromium/chrome/test/util/FullscreenTestUtils.java",
-    "javatests/src/org/chromium/chrome/test/util/InfoBarTestAnimationListener.java",
-    "javatests/src/org/chromium/chrome/test/util/InfoBarUtil.java",
-    "javatests/src/org/chromium/chrome/test/util/MenuUtils.java",
-    "javatests/src/org/chromium/chrome/test/util/NewTabPageTestUtils.java",
-    "javatests/src/org/chromium/chrome/test/util/OmniboxTestUtils.java",
-    "javatests/src/org/chromium/chrome/test/util/OverviewModeBehaviorWatcher.java",
-    "javatests/src/org/chromium/chrome/test/util/parameters/AddFakeAccountToAppParameter.java",
-    "javatests/src/org/chromium/chrome/test/util/parameters/AddFakeAccountToOsParameter.java",
-    "javatests/src/org/chromium/chrome/test/util/parameters/AddGoogleAccountToOsParameter.java",
-    "javatests/src/org/chromium/chrome/test/util/PrerenderTestHelper.java",
-    "javatests/src/org/chromium/chrome/test/util/TabStripUtils.java",
-    "javatests/src/org/chromium/chrome/test/util/TranslateUtil.java",
-  ]
+  DEPRECATED_java_in_dir = "javatests/src"
   deps = [
     "//base:base_java",
     "//base:base_java_test_support",
