Add some initial unit tests for saveOfflinePages.
fgorski, ianwen: code review
bauerb: owners

add a return that was missing.

BUG=NONE

Review URL: https://codereview.chromium.org/1684373003

Cr-Commit-Position: refs/heads/master@{#377018}

--- a/chrome/android/BUILD.gn
+++ b/chrome/android/BUILD.gn
@@ -303,6 +303,7 @@ junit_binary("chrome_junit_tests") {
     "//third_party/android_tools:android_support_v7_mediarouter_java",
     "//third_party/cacheinvalidation:cacheinvalidation_javalib",
     "//third_party/junit:hamcrest",
+    "//ui/android:ui_java",
     google_play_services_library,
   ]
 }
