--- a/content/gpu/BUILD.gn
+++ b/content/gpu/BUILD.gn
@@ -44,6 +44,7 @@ source_set("gpu_sources") {
     "//base",
     "//content:export",
     "//content/public/child:child_sources",
+    "//gpu/ipc/common:ipc_common_sources",
     "//mojo/shell/public/interfaces",
     "//skia",
     "//ui/gl",
