Convert enable_one_click_signin to new buildflag system
This flag is only used in a few places in Chrome

Review URL: https://codereview.chromium.org/1718093005

Cr-Commit-Position: refs/heads/master@{#377038}

--- a/chrome/common/BUILD.gn
+++ b/chrome/common/BUILD.gn
@@ -42,6 +42,7 @@ buildflag_header("features") {
   header = "features.h"
   flags = [
     "ENABLE_GOOGLE_NOW=$enable_google_now",
+    "ENABLE_ONE_CLICK_SIGNIN=$enable_one_click_signin",
     "ANDROID_JAVA_UI=$android_java_ui",
     "USE_VULCANIZE=$use_vulcanize",
   ]
