--- a/chrome/test/BUILD.gn
+++ b/chrome/test/BUILD.gn
@@ -8,6 +8,7 @@ import("//build/config/crypto.gni")
 import("//build/config/features.gni")
 import("//build/config/ui.gni")
 import("//chrome/chrome_tests.gni")
+import("//chrome/common/features.gni")
 import("//chrome/test/base/js2gtest.gni")
 import("//testing/test.gni")
 
