--- a/chrome/common/features.gni
+++ b/chrome/common/features.gni
@@ -19,6 +19,8 @@ declare_args() {
   use_vulcanize = true
 }
 
+enable_one_click_signin = is_win || is_mac || (is_linux && !is_chromeos)
+
 chrome_grit_defines = [
   "enable_google_now=$enable_google_now",
   "use_vulcanize=$use_vulcanize",
