--- a/BUILD.gn
+++ b/BUILD.gn
@@ -12,7 +12,6 @@ import("//build/config/features.gni")
 import("//build/config/sanitizers/sanitizers.gni")
 import("//build/config/ui.gni")
 import("//build_overrides/v8.gni")
-import("//build_overrides/webrtc.gni")
 import("//media/media_options.gni")
 import("//third_party/openh264/openh264_args.gni")
 
@@ -199,23 +198,18 @@ group("both_gn_and_gyp") {
     ]
   } else {
     deps += [
+      #"//ios/chrome:ios_chrome_unittests", TODO(GYP)
+      #"//ios/chrome/app", TODO(GYP)
+      #"//ios/chrome/browser", TODO(GYP)
+      "//ios/chrome/common",
       "//ios/net:ios_net_unittests",
+      "//ios/public/provider/chrome/browser",
       "//ios/public/provider/web",
       "//ios/testing:ocmock_support_unittest",
       "//ios/third_party/ochamcrest",
       "//ios/web:ios_web_unittests",
       "//ios/web/shell:ios_web_shell",
     ]
-
-    if (ios_use_webrtc) {
-      deps += [
-        "//ios/chrome:ios_chrome_unittests",
-        "//ios/chrome/app",
-        "//ios/chrome/browser",
-        "//ios/chrome/common",
-        "//ios/public/provider/chrome/browser",
-      ]
-    }
   }
 
   deps += root_extra_deps
