blimp client : Added a text input feature to blimp client on android
Added a floating edit text along with softkey which would show up
when text input is needed from users.

BUG=585646
NOTRY=true

Review URL: https://codereview.chromium.org/1688433004

Cr-Commit-Position: refs/heads/master@{#377072}

--- a/blimp/client/BUILD.gn
+++ b/blimp/client/BUILD.gn
@@ -309,6 +309,7 @@ if (is_android) {
       "app/android/java/src/org/chromium/blimp/BlimpLibraryLoader.java",
       "app/android/java/src/org/chromium/blimp/BlimpRendererActivity.java",
       "app/android/java/src/org/chromium/blimp/BlimpView.java",
+      "app/android/java/src/org/chromium/blimp/input/TextInputFeature.java",
       "app/android/java/src/org/chromium/blimp/session/BlimpClientSession.java",
       "app/android/java/src/org/chromium/blimp/session/TabControlFeature.java",
       "app/android/java/src/org/chromium/blimp/toolbar/Toolbar.java",
