--- a/components/BUILD.gn
+++ b/components/BUILD.gn
@@ -51,6 +51,7 @@ test("components_unittests") {
     "//components/metrics:unit_tests",
     "//components/net_log:unit_tests",
     "//components/network_time:unit_tests",
+    "//components/ntp_snippets:unit_tests",
     "//components/open_from_clipboard:unit_tests",
     "//components/os_crypt:unit_tests",
     "//components/prefs:unit_tests",
