--- a/chrome/common/BUILD.gn
+++ b/chrome/common/BUILD.gn
@@ -41,9 +41,10 @@ if (enable_extensions) {
 buildflag_header("features") {
   header = "features.h"
   flags = [
+    "ANDROID_JAVA_UI=$android_java_ui",
     "ENABLE_GOOGLE_NOW=$enable_google_now",
     "ENABLE_ONE_CLICK_SIGNIN=$enable_one_click_signin",
-    "ANDROID_JAVA_UI=$android_java_ui",
+    "ENABLE_PACKAGE_MASH_SERVICES=$enable_package_mash_services",
     "USE_VULCANIZE=$use_vulcanize",
   ]
 }
