--- a/components/mus/BUILD.gn
+++ b/components/mus/BUILD.gn
@@ -36,6 +36,7 @@ if (is_android) {
     deps = [
       ":lib",
       ":manifest",
+      "//mojo/platform_handle:for_shared_library",
       "//mojo/shell/public/cpp:sources",
     ]
 
