--- a/mojo/shell/runner/host/BUILD.gn
+++ b/mojo/shell/runner/host/BUILD.gn
@@ -61,7 +61,6 @@ source_set("lib") {
     "child_process.h",
     "child_process_host.cc",
     "child_process_host.h",
-    "command_line_switch.h",
     "in_process_native_runner.cc",
     "in_process_native_runner.h",
     "out_of_process_native_runner.cc",
@@ -111,6 +110,7 @@ test("mojo_runner_host_unittests") {
     "//base/test:test_support",
     "//mojo/edk/system",
     "//mojo/message_pump",
+    "//mojo/shell",
     "//mojo/shell/runner:init",
     "//mojo/shell/runner/common",
     "//testing/gtest",
