--- a/mash/shell/BUILD.gn
+++ b/mash/shell/BUILD.gn
@@ -8,17 +8,13 @@ import("//mojo/public/mojo_application_manifest.gni")
 import("//mojo/public/tools/bindings/mojom.gni")
 import("//tools/grit/repack.gni")
 
-mojo_native_application("shell") {
-  output_name = "mash_shell"
-
+source_set("lib") {
   sources = [
-    "main.cc",
     "shell_application_delegate.cc",
     "shell_application_delegate.h",
   ]
 
   deps = [
-    ":manifest",
     "//base",
     "//mash/shell/public/interfaces",
     "//mojo/common",
@@ -32,6 +28,25 @@ mojo_native_application("shell") {
     "//mash/browser_driver",
     "//mash/quick_launch",
     "//mash/wm",
+  ]
+}
+
+mojo_native_application("shell") {
+  output_name = "mash_shell"
+
+  sources = [
+    "main.cc",
+  ]
+
+  deps = [
+    ":lib",
+    ":manifest",
+    "//base",
+    "//mash/shell/public/interfaces",
+    "//mojo/common",
+    "//mojo/public/cpp/bindings",
+    "//mojo/shell/public/cpp",
+    "//mojo/shell/public/cpp:sources",
   ]
 }
 
