--- a/components/autofill/core/browser/BUILD.gn
+++ b/components/autofill/core/browser/BUILD.gn
@@ -78,6 +78,8 @@ source_set("browser") {
     "dialog_section.h",
     "email_field.cc",
     "email_field.h",
+    "field_candidates.cc",
+    "field_candidates.h",
     "field_types.h",
     "form_field.cc",
     "form_field.h",
@@ -274,6 +276,7 @@ source_set("unit_tests") {
     "country_names_unittest.cc",
     "credit_card_field_unittest.cc",
     "credit_card_unittest.cc",
+    "field_candidates_unittest.cc",
     "form_field_unittest.cc",
     "form_structure_unittest.cc",
     "legal_message_line_unittest.cc",
