ozone: Restrict visibility of internal targets
This enforces similar rules to the ones we have in DEPS using "gn check".
In practice it is even stricter since we can list individual targets if
we want.

The main things are:
  - //ui/ozone is public. This is the main component.
  - Platform internal code dependencies from outside //ui/ozone/* are
    disallowed by default.
  - The ozone_base target exists only to untangle some subtle dependency
    issues and is whitelisted for those specific places.

Review URL: https://codereview.chromium.org/1718443002

Cr-Commit-Position: refs/heads/master@{#377145}

--- a/content/common/BUILD.gn
+++ b/content/common/BUILD.gn
@@ -287,10 +287,7 @@ source_set("common") {
   if (use_ozone) {
     configs += [ "//ui/ozone:vgem_map" ]
 
-    deps += [
-      "//ui/ozone:ozone",
-      "//ui/ozone:ozone_base",
-    ]
+    deps += [ "//ui/ozone" ]
   } else {
     sources -= [
       "cursors/webcursor_ozone.cc",
