--- a/ui/ozone/platform/cast/BUILD.gn
+++ b/ui/ozone/platform/cast/BUILD.gn
@@ -5,6 +5,11 @@
 import("//build/config/chromecast_build.gni")
 import("//ui/ozone/ozone.gni")
 
+visibility = [
+  "//ui/ozone/*",
+  "//chromecast/*",
+]
+
 # GYP version: cast.gypi:ozone_platform_cast
 # TODO(slan): gn check needs deps on ozone and media to pass. Correct this.
 source_set("cast") {
