--- a/ui/ozone/BUILD.gn
+++ b/ui/ozone/BUILD.gn
@@ -8,6 +8,8 @@ import("//testing/test.gni")
 
 assert(use_ozone)
 
+visibility = [ ":*" ]
+
 # The list of platforms that will be built.
 ozone_platforms = []
 
@@ -103,6 +105,15 @@ component("ozone_base") {
     "//ui/gfx/geometry",
     "//ui/gfx/ipc",
   ]
+
+  visibility += [
+    # Everyone should depend on //ui/ozone instead except a handful of
+    # things that would otherwise create a cycle.
+    "//ui/base",
+    "//ui/events/ozone/*",
+    "//ui/ozone/platform/*",
+    "//ui/ozone/common/*",
+  ]
 }
 
 source_set("platform") {
@@ -112,14 +123,17 @@ source_set("platform") {
     "platform_selection.cc",
     "platform_selection.h",
     "public/client_native_pixmap_factory.cc",
-    "public/client_native_pixmap_factory.h",
     "public/ozone_gpu_test_helper.cc",
-    "public/ozone_gpu_test_helper.h",
     "public/ozone_platform.cc",
-    "public/ozone_platform.h",
     constructor_list_cc_file,
     platform_list_cc_file,
     platform_list_h_file,
+  ]
+
+  public = [
+    "public/client_native_pixmap_factory.h",
+    "public/ozone_gpu_test_helper.h",
+    "public/ozone_platform.h",
   ]
 
   defines = [ "OZONE_IMPLEMENTATION" ]
@@ -148,6 +162,9 @@ source_set("platform") {
 
   # Platforms are always linked into //ui/ozone and can include our headers.
   allow_circular_includes_from = ozone_platform_deps
+
+  # This is used for platform tests.
+  visibility += [ "//ui/ozone/platform/*" ]
 }
 
 component("ozone") {
@@ -172,6 +189,8 @@ action("generate_ozone_platform_list") {
         "--output_txt=" + rebase_path(platform_list_txt_file, root_build_dir),
         "--default=$ozone_platform",
       ] + ozone_platforms
+
+  visibility += [ "//media:*" ]
 }
 
 # GYP version: ui/ozone/ozone.gyp:generate_constructor_list
