Move ENABLE_HIDPI to new build flags system
This define is only used in one source file.

This takes the flag out of the global build configuration in GN and puts it in a new .gni file in //ui/base that interested parties can import. This flag then controls a define set in the new generated header.

Review URL: https://codereview.chromium.org/1719343002

Cr-Commit-Position: refs/heads/master@{#377177}

--- a/ash/BUILD.gn
+++ b/ash/BUILD.gn
@@ -5,6 +5,7 @@
 import("//build/config/features.gni")
 import("//build/config/ui.gni")
 import("//testing/test.gni")
+import("//ui/base/ui_features.gni")
 
 assert(use_aura)
 assert(enable_hidpi)
