--- a/ui/base/BUILD.gn
+++ b/ui/base/BUILD.gn
@@ -2,10 +2,12 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+import("//build/buildflag_header.gni")
 import("//build/config/compiler/compiler.gni")
 import("//build/config/sanitizers/sanitizers.gni")
 import("//build/config/ui.gni")
 import("//testing/test.gni")
+import("//ui/base/ui_features.gni")
 import("//ui/ozone/ozone.gni")
 
 if (is_android) {
@@ -41,6 +43,11 @@ component("ui_data_pack") {
 
   # TODO(jschuh): crbug.com/167187 fix size_t to int truncations.
   configs += [ "//build/config/compiler:no_size_t_to_int_warning" ]
+}
+
+buildflag_header("ui_features") {
+  header = "ui_features.h"
+  flags = [ "ENABLE_HIDPI=$enable_hidpi" ]
 }
 
 component("base") {
@@ -344,6 +351,7 @@ component("base") {
   defines = [ "UI_BASE_IMPLEMENTATION" ]
 
   public_deps = [
+    ":ui_features",
     "//base",
     "//skia",
     "//ui/events:events_base",
