--- a/ash/resources/BUILD.gn
+++ b/ash/resources/BUILD.gn
@@ -4,6 +4,7 @@
 
 import("//tools/grit/grit_rule.gni")
 import("//tools/grit/repack.gni")
+import("//ui/base/ui_features.gni")
 
 assert(enable_hidpi)
 
