--- a/chrome/BUILD.gn
+++ b/chrome/BUILD.gn
@@ -14,6 +14,7 @@ import("//build/config/win/manifest.gni")
 import("//chrome/chrome_repack_locales.gni")
 import("//chrome/common/features.gni")
 import("//chrome/version.gni")
+import("//ui/base/ui_features.gni")
 
 declare_args() {
   # Specify the current PGO phase, only used for the Windows MSVS build. Here's
