SafeBrowsing: Create and destroy the v4 protocol manager with the IO thread.
The UrlRequestContextGetter referred to by the v4 protocol manager is
detroyed when StopOnIOThread is called on the Safe Browsing
Service. This cl therefore creates and destroys the v4 protocol manager
with the starting and stopping of the IO thread, rather than in the
constructor and destructor.

BUG=561867,543161

Review URL: https://codereview.chromium.org/1715313002

Cr-Commit-Position: refs/heads/master@{#377185}

--- a/components/safe_browsing_db/BUILD.gn
+++ b/components/safe_browsing_db/BUILD.gn
@@ -52,6 +52,7 @@ source_set("database_manager") {
     ":util",
     ":v4_get_hash_protocol_manager",
     "//base:base",
+    "//content/public/browser",
     "//content/public/common",
     "//net",
     "//url:url",
@@ -93,6 +94,7 @@ source_set("remote_database_manager") {
     "//base:base",
     "//components/variations",
     "//content/public/browser",
+    "//net",
     "//url:url",
   ]
 }
@@ -145,6 +147,7 @@ source_set("test_database_manager") {
   deps = [
     ":database_manager",
     "//base:base",
+    "//net",
   ]
 }
 
