--- a/.gitignore
+++ b/.gitignore
@@ -343,6 +343,7 @@ vs-chromium-project.txt
 /third_party/junit/src
 /third_party/kasko
 /third_party/khronos_glcts
+/third_party/leakcanary/src
 /third_party/leveldatabase/src
 /third_party/leveldb
 /third_party/libc++-static/libc++.a
