--- a/blimp/engine/BUILD.gn
+++ b/blimp/engine/BUILD.gn
@@ -88,34 +88,24 @@ source_set("app_ui") {
     "app/ui/blimp_layout_manager.h",
     "app/ui/blimp_screen.cc",
     "app/ui/blimp_screen.h",
+    "app/ui/blimp_ui_context_factory.cc",
+    "app/ui/blimp_ui_context_factory.h",
+    "app/ui/blimp_window_tree_host.cc",
+    "app/ui/blimp_window_tree_host.h",
   ]
-
-  if (!use_x11) {
-    sources += [
-      "app/ui/blimp_ui_context_factory.cc",
-      "app/ui/blimp_ui_context_factory.h",
-      "app/ui/blimp_window_tree_host.cc",
-      "app/ui/blimp_window_tree_host.h",
-    ]
-  }
 
   deps = [
+    "//blimp/common:blimp_common",
+    "//cc",
+    "//cc/surfaces",
     "//ui/aura",
+    "//ui/compositor",
+    "//ui/events",
     "//ui/gfx",
     "//ui/platform_window",
+    "//ui/platform_window",
+    "//ui/platform_window/stub/",
   ]
-
-  if (!use_x11) {
-    deps += [
-      "//blimp/common:blimp_common",
-      "//cc",
-      "//cc/surfaces",
-      "//ui/compositor",
-      "//ui/events",
-      "//ui/platform_window",
-      "//ui/platform_window/stub/",
-    ]
-  }
 }
 
 source_set("common") {
@@ -172,6 +162,7 @@ source_set("app_unit_tests") {
 
   sources = [
     "app/blimp_engine_config_unittest.cc",
+    "app/ui/blimp_screen_unittest.cc",
   ]
 
   deps = [
@@ -181,6 +172,7 @@ source_set("app_unit_tests") {
     "//base/test:test_support",
     "//testing/gmock",
     "//testing/gtest",
+    "//ui/gfx:test_support",
   ]
 }
 
