--- a/chrome/android/BUILD.gn
+++ b/chrome/android/BUILD.gn
@@ -14,23 +14,13 @@ import("//third_party/protobuf/proto_library.gni")
 import("channel.gni")
 
 manifest_package = "org.chromium.chrome"
-if (enable_configuration_policy) {
-  configuration_policy = 1
-} else {
-  configuration_policy = 0
-}
 
-chrome_public_jinja_variables = [
-  "channel=$android_channel",
-  "manifest_package=$manifest_package",
-  "configuration_policy=$configuration_policy",
-]
+chrome_public_jinja_variables = default_chrome_public_jinja_variables +
+                                [ "manifest_package=$manifest_package" ]
 
-chrome_sync_shell_jinja_variables = [
-  "channel=$android_channel",
-  "manifest_package=org.chromium.chrome.sync_shell",
-  "configuration_policy=$configuration_policy",
-]
+chrome_sync_shell_jinja_variables =
+    default_chrome_public_jinja_variables +
+    [ "manifest_package=org.chromium.chrome.sync_shell" ]
 
 chrome_apk_gypi = exec_script("//build/gypi_to_gn.py",
                               [ rebase_path("chrome_apk.gyp") ],
@@ -156,6 +146,7 @@ android_library("chrome_java") {
     "//third_party/cacheinvalidation:cacheinvalidation_proto_java",
     "//third_party/gif_player:gif_player_java",
     "//third_party/jsr-305:jsr_305_javalib",
+    "//third_party/leakcanary:leakcanary_java",
     "//ui/android:ui_java",
     "//ui/android:ui_java_resources",
     google_play_services_library,
