--- a/mojo/public/cpp/bindings/BUILD.gn
+++ b/mojo/public/cpp/bindings/BUILD.gn
@@ -11,8 +11,10 @@ source_set("bindings") {
     "associated_interface_ptr_info.h",
     "associated_interface_request.h",
     "binding.h",
+    "binding_set.h",
     "interface_ptr.h",
     "interface_ptr_info.h",
+    "interface_ptr_set.h",
     "interface_request.h",
     "lib/array_internal.cc",
     "lib/array_internal.h",
@@ -85,8 +87,6 @@ source_set("bindings") {
     "struct_ptr.h",
     "struct_traits.h",
     "type_converter.h",
-    "weak_binding_set.h",
-    "weak_interface_ptr_set.h",
   ]
 
   public_deps = [
