Revert "Rename WeakBindingSet/WeakInterfacePtrSet to BindingSet/InterfacePtrSet."
This reverts commit 632d319842096e6998d174e2f251865979ce2b72.

TBR=jam@chromium.org
BUG=
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_site_isolation

Review URL: https://codereview.chromium.org/1734803002 .

Cr-Commit-Position: refs/heads/master@{#377393}

--- a/mojo/public/cpp/bindings/BUILD.gn
+++ b/mojo/public/cpp/bindings/BUILD.gn
@@ -11,10 +11,8 @@ source_set("bindings") {
     "associated_interface_ptr_info.h",
     "associated_interface_request.h",
     "binding.h",
-    "binding_set.h",
     "interface_ptr.h",
     "interface_ptr_info.h",
-    "interface_ptr_set.h",
     "interface_request.h",
     "lib/array_internal.cc",
     "lib/array_internal.h",
@@ -87,6 +85,8 @@ source_set("bindings") {
     "struct_ptr.h",
     "struct_traits.h",
     "type_converter.h",
+    "weak_binding_set.h",
+    "weak_interface_ptr_set.h",
   ]
 
   public_deps = [
