--- a/mojo/shell/public/cpp/BUILD.gn
+++ b/mojo/shell/public/cpp/BUILD.gn
@@ -23,6 +23,7 @@ source_set("sources") {
     "application_runner.h",
     "connect.h",
     "connection.h",
+    "connector.h",
     "initialize_base_and_icu.cc",
     "interface_binder.h",
     "interface_factory.h",
@@ -31,6 +32,8 @@ source_set("sources") {
     "lib/application_runner.cc",
     "lib/connection_impl.cc",
     "lib/connection_impl.h",
+    "lib/connector_impl.cc",
+    "lib/connector_impl.h",
     "lib/interface_factory_binder.h",
     "lib/interface_registry.cc",
     "lib/shell_client.cc",
