Makes PackageManager take the ApplicationCatalogStore in constructor
And plumbs through the appropriate places.
Also adds a test of all this via backroundshell.
And lastly I converted PackageManager to be in terms of GURLs. This way mojo:foo, mojo://foo and mojo://foo/ are all treated the same.

BUG=577274
TEST=covered by tests
R=ben@chromium.org

Review URL: https://codereview.chromium.org/1733463002

Cr-Commit-Position: refs/heads/master@{#377410}

--- a/mojo/shell/BUILD.gn
+++ b/mojo/shell/BUILD.gn
@@ -43,12 +43,16 @@ source_set("shell") {
     "//base/third_party/dynamic_annotations",
     "//mojo/common",
     "//mojo/public/cpp/bindings",
-    "//mojo/services/package_manager:lib",
     "//mojo/services/package_manager/public/interfaces",
     "//mojo/shell/public/cpp:sources",
     "//mojo/shell/public/interfaces",
     "//mojo/util:filename_util",
     "//url",
+  ]
+
+  public_deps = [
+    # ApplicationManager exposes and uses PackageManager types in its header.
+    "//mojo/services/package_manager:lib",
   ]
 
   # For mojo/shell/application_loader.h
