--- a/mojo/shell/background/BUILD.gn
+++ b/mojo/shell/background/BUILD.gn
@@ -18,6 +18,7 @@ source_set("lib") {
   deps = [
     "//base",
     "//mojo/message_pump",
+    "//mojo/services/package_manager:lib",
     "//mojo/shell",
     "//mojo/shell/public/cpp:sources",
     "//mojo/shell/runner:init",
