Adds manifest for chrome
BUG=581539
TEST=none
R=ben@chromium.org
TBR=ben@chromium.org

Review URL: https://codereview.chromium.org/1733803002

Cr-Commit-Position: refs/heads/master@{#377482}

--- a/chrome/app/mash/BUILD.gn
+++ b/chrome/app/mash/BUILD.gn
@@ -10,6 +10,7 @@ source_set("mash") {
     "mash_runner.h",
   ]
   deps = [
+    ":chrome_manifest",
     ":manifest",
     "//ash/mus:lib",
     "//ash/resources",
@@ -61,4 +62,10 @@ mojo_application_manifest("manifest") {
     deps += [ "//components/font_service:manifest" ]
     packaged_applications += [ "font_service" ]
   }
+}
+
+mojo_application_manifest("chrome_manifest") {
+  type = "exe"
+  application_name = "chrome"
+  source = "chrome_manifest.json"
 }
