CC Animation: Expose TargetProperty enum to be aliased in Blink Platform.
TargetProperty is intended to be used as an alias in Source/platform/animation/CompositorTargetProperty.h

This is slightly better then untyped approach used here:
https://codereview.chromium.org/1599673002
where we setup struct with constants in it and pass uint32_t everywhere.

An alternative approach with strongly typed enum
considered too verbose:
https://codereview.chromium.org/1698813002/

BUG=577016
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review URL: https://codereview.chromium.org/1700653002

Cr-Commit-Position: refs/heads/master@{#377501}

--- a/cc/BUILD.gn
+++ b/cc/BUILD.gn
@@ -34,6 +34,8 @@ component("cc") {
     "animation/layer_animation_value_provider.h",
     "animation/scroll_offset_animation_curve.cc",
     "animation/scroll_offset_animation_curve.h",
+    "animation/target_property.cc",
+    "animation/target_property.h",
     "animation/timing_function.cc",
     "animation/timing_function.h",
     "animation/transform_operation.cc",
